--- a/src/pages/ProductList/ProductList.module.scss
+++ b/src/pages/ProductList/ProductList.module.scss
@@ -1,7 +1,7 @@
 .product-list {
   max-width: 1200px;
   margin: 0 auto 0 auto;
-  padding: 0 4.5rem;
+  padding: 2rem 4.5rem;
   display: flex;
   flex-flow: row wrap;
 
